src/test/ui/error-codes/E0232.stderr
error[E0232]: `#[rustc_on_unimplemented]` requires a value
  --> $DIR/E0232.rs:13:1
   |
13 | #[rustc_on_unimplemented]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ value required here
   |
   = note: eg `#[rustc_on_unimplemented = "foo"]`

error: aborting due to previous error

