src/test/ui/error-codes/E0232.rs
#![feature(on_unimplemented)]

#[rustc_on_unimplemented]
//~^ ERROR E0232
trait Bar {}

fn main() {
}
